--- a/carousel.html
+++ b/carousel.html
@@ -7,103 +7,110 @@
     <title>웹 접근성 미션 - step2</title>
   </head>
   <body>
-    <ul class="carousel-list">
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&duration=7&cabin=Y"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&duration=7&cabin=Y"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&duration=7&cabin=Y"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-      <li>
-        <a
-          target="_blank"
-          rel="external"
-          title=""
-          href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
-          ><img
-            class="carousel-image"
-            src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
-            alt=""
-        /></a>
-      </li>
-    </ul>
+    <h1>지금 떠나기 좋은 여행</h1>
+    <div class="carousel-container">
+      <ul class="carousel-list">
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&duration=7&cabin=Y"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&duration=7&cabin=Y"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&duration=7&cabin=Y"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            rel="external"
+            title=""
+            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
+            ><img
+              class="carousel-image"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
+              alt=""
+          /></a>
+        </li>
+      </ul>
+      <div class="arrow-button-list">
+        <button type="button" class="prev-arrow-button"></button>
+        <button type="button" class="next-arrow-button"></button>
+      </div>
+    </div>
   </body>
 </html>
