--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
             <button type="button" class="helptip-trigger" aria-label="성인 기준 상세 안내 열기"><span>?</span></button>
             <div class="helptip">
               <span class="helptip-content">국제선 만 12세 이상, 국내선 만 13세 이상</span>
-              <span class="aria-hidden" aria-hidden="true" aria-live="polite"></span>
               <button type="button" class="helptip-closer" aria-label="성인 기준 상세 안내 닫기"><span>x</span></button>
             </div>
           </div>
@@ -33,10 +32,11 @@
             value="0"
           ></input>
           <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기">+</button>
-          <div class="aria-hidden spin-input-aria-live-message" aria-live="polite"></div>
         </div>
       </div>
     </div>
-    <div id="snackbar" role="status" aria-live="assertive"></div>
+    <div id="snackbar" role="status"></div>
+    <div id="aria-live-polite-message" class="aria-hidden" aria-live="polite"></div>
+    <div id="aria-live-assertive-message" class="aria-hidden" aria-live="assertive"></div>
   </body>
 </html>
