--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹 접근성 a11y-</title>
+    <title>웹 접근성 a11y-airline-동키콩</title>
 </head>
 
 <body>
-    <div id="root" class="flex">
+    <div id="page" class="flex">
 
     </div>
 </body>
